# pigeon_plugin_example

./: pubspec.yaml  run_pigeon.sh
android/src/main/java/com/example/pigeon_plugin/: Messages.java
example/android/app/src/main/: AndroidManifest.xml
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/Classes/: messages.h  messages.m
lib/: messages.dart
windows/: CMakeLists.txt  messages.cpp  messages.h  pigeon_plugin.cpp
windows/include/pigeon_plugin/: pigeon_plugin.h
