cmake_minimum_required(VERSION 3.14)
set(PROJECT_NAME "pigeon_plugin")
project(${PROJECT_NAME} LANGUAGES CXX)

set(PLUGIN_NAME "${PROJECT_NAME}_plugin")

list(APPEND PLUGIN_SOURCES
  "messages.h"
  "messages.cpp"
)

add_library(${PLUGIN_NAME} SHARED
  "include/pigeon_plugin/pigeon_plugin.h"
  "pigeon_plugin.cpp"
  ${PLUGIN_SOURCES}
)


apply_standard_settings(${PLUGIN_NAME})
set_target_properties(${PLUGIN_NAME} PROPERTIES
  CXX_VISIBILITY_PRESET hidden)
target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
target_include_directories(${PLUGIN_NAME} INTERFACE
  "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)

# List of absolute paths to libraries that should be bundled with the plugin
set(pigeon_plugin_bundled_libraries
  ""
  PARENT_SCOPE
)
